--- a/package.json
+++ b/package.json
@@ -38,5 +38,9 @@
     "tracer": "0.8.11",
     "underscore": "1.8.3",
     "uuid": "3.1.0"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "supertest": "^3.1.0"
   }
 }
